--- a/WebContent/financeiro/pagar/findContasPagar.xhtml
+++ b/WebContent/financeiro/pagar/findContasPagar.xhtml
@@ -158,7 +158,7 @@
 							</div>
 
 							<div class="ui-g-12 ui-lg-1">
-								<p:commandButton style="height:40px;width:130px; "
+								<p:commandButton style="height:40px;"
 									styleClass="btn btn-blue" icon="ui-icon-search"
 									immediate="true" id="btnBuscatxt"
 									actionListener="#{contasPagarBean.busca}"
