--- a/WebContent/cadastro/findEstoquista.xhtml
+++ b/WebContent/cadastro/findEstoquista.xhtml
@@ -11,9 +11,24 @@
 	<ui:define name="head">
 		<style>
 .ui-g label {
-	font-size: large;
+	font-size: medium;
 	color: black;
 	font-weight: bold
+}
+
+.ui-selectoneradio label {
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 16px 0 8px;
+    vertical-align: middle;
+    /*color: #2e6e9e !important;*/
+    font-size: medium;
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+    border: 1px solid #c5dbec;
+    font-weight: bold;
+    color: black;
 }
 
 .ui-fluid .ui-inputmask {
@@ -78,32 +93,53 @@
 					<div class="ui-g">
 						<div class="ui-g-12">
 							<h:panelGroup id="botoes">
-								<div class="ui-g-12 ui-lg-2">
+								<div class="ui-g-12 ui-lg-1">
 									<p:commandButton value="Incluir"
 										style="height:40px; background: greenyellow !important  ;   
 										background-color: greenyellow; 
 										color:white !important;
 										font-size:large; "
 										action="#{estoquistaBean.novo}" rendered="true"
-										immediate="true" icon="fa fa-plus" iconPos="right" />
+										immediate="true" />
 								</div>
-								<div class="ui-g-12 ui-lg-2">
+								<div class="ui-g-12 ui-lg-1">
 									<p:commandButton id="botaoEditar" value="Editar"
 										style="height:40px; background: lightskyblue !important  ;
 										   background-color: lightskyblue ;
 										   color:white !important;
-										   font-size:large;" immediate="true"
-										   action="#{estoquistaBean.edita}"
+										   font-size:large;"
+										immediate="true" action="#{estoquistaBean.edita}"
 										update="table, @form"
 										rendered="#{estoquistaBean.estoquistaModel.idEstoquista > 0 }"
-										icon=" fa fa-pencil" iconPos="right" >
-										
-										<f:setPropertyActionListener value="#{d}" 
-								target="#{estoquistaBean.estoquistaModel}"/>
-										</p:commandButton>
+										>
+
+										<f:setPropertyActionListener value="#{d}"
+											target="#{estoquistaBean.estoquistaModel}" />
+									</p:commandButton>
+								</div>
+								<div class="ui-g-12 ui-lg-2">
+									<p:commandButton id="botaoInativar" value="Ativar - Inativar"
+										style="height:40px;background: tomato !important  ;
+										   background-color: tomato ;
+										   color:white !important;
+										   font-size:large;"
+										immediate="true" action="#{estoquistaBean.inativar}"
+										update="table, @form"
+										rendered="#{estoquistaBean.estoquistaModel.idEstoquista > 0 }">
+									</p:commandButton>
+								</div>
+								<div class="ui-g-12 ui-lg-3">
+									<p:selectOneRadio value="#{estoquistaBean.campoBuscaAtivo}"
+										style="    padding-left: 10% !important;">
+										<f:selectItem itemLabel="Todos" itemValue="T" />
+										<f:selectItem itemLabel="Ativo" itemValue="A" />
+										<f:selectItem itemLabel="Inativo" itemValue="I" />
+										<p:ajax event="change" listener="#{estoquistaBean.busca}"
+											update="table" />
+									</p:selectOneRadio>
 								</div>
 							</h:panelGroup>
-							<div class="ui-g-12 ui-lg-4">
+							<div class="ui-g-12 ui-lg-2">
 								<p:inputText value="#{estoquistaBean.campoBuscaNome}"
 									placeholder="Buscar pelo Nome" id="inputNome"
 									style="height:40px; ">
@@ -119,7 +155,7 @@
 								</p:inputText>
 							</div>
 							<div class="ui-g-12 ui-lg-1">
-								<p:commandButton style="height:40px;width:130px; "
+								<p:commandButton style="height:40px; "
 									styleClass="btn btn-blue" icon="ui-icon-search"
 									id="btnBuscatxt" actionListener="#{estoquistaBean.busca}"
 									update=" inputNome,inputCPF, table" />
@@ -130,8 +166,9 @@
 				</p:panel>
 				<p:panel>
 					<div class="ui-g">
-					<br/>
+						<br />
 						<p:dataTable value="#{estoquistaBean.lstEstoquista}" var="d"
+						emptyMessage="Não há dados"
 							styleClass="table.gridtable" rowKey="#{d.idEstoquista}"
 							selectionMode="single" id="table" rows="10" paginator="true"
 							selection="#{estoquistaBean.estoquistaModel}">
@@ -140,30 +177,30 @@
 								listener="#{estoquistaBean.onRowSelect}"
 								update="table,:form:botoes" />
 
-							<p:column headerText="Matricula" priority="1"
-								style="overflow: hidden;text-align: center; font-size: medium; width: 90px">
-								<a>#{d.idEstoquista} <br />
-								</a>
-							</p:column>
-
 							<p:column headerText="Estoquista" priority="1"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<a>#{d.pessoa.pessoaNome} <br/> CPF -
-									#{d.pessoa.pessoaCPF} 
-								</a>
+								style="overflow: hidden;text-align: left; font-size: large">
+								<p:outputLabel value="#{d.pessoa.pessoaNome}" />
+								<br />
+								<p:outputLabel value=" CPF - #{d.pessoa.pessoaCPF}" />
+								<br />
+								<p:outputLabel
+									value="Telefone - #{d.pessoa.pessoaTelefonePrimario}" />
 							</p:column>
 
 							<p:column headerText="Endereço" priority="5"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<a>#{d.pessoa.logradouro} <br />
-								</a>
+								style="overflow: hidden;text-align: left; font-size: large">
+								<p:outputLabel value="#{d.pessoa.logradouro}" />
+								<br />
+								<p:outputLabel value="#{d.pessoa.localidade}  - #{d.pessoa.uf}" />
 							</p:column>
-							<p:column headerText="Telefone" priority="5"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<a>#{d.pessoa.pessoaTelefonePrimario} <br />
-								</a>
+							<p:column headerText="Status" priority="5"
+								style="overflow: hidden;text-align: center; font-size: large; width: 8%">
+								<p:outputLabel value="Ativo" rendered="#{d.ativo eq 'A'}"
+									style="color : green" />
+								<p:outputLabel value="Inativo" rendered="#{d.ativo eq 'I'}"
+									style="color : red" />
 							</p:column>
-							<p:column style="width:50px" priority="4">
+							<!--  <p:column style="width:50px" priority="4">
 								<center>
 									<f:facet name="header">Excluir</f:facet>
 									<p:commandLink action="#{estoquistaBean.excluir}"
@@ -174,7 +211,7 @@
 											target="#{estoquistaBean.estoquistaModel}" />
 									</p:commandLink>
 								</center>
-							</p:column>
+							</p:column> -->
 						</p:dataTable>
 					</div>
 				</p:panel>
