--- a/WebContent/cadastro/findMedico.xhtml
+++ b/WebContent/cadastro/findMedico.xhtml
@@ -16,6 +16,21 @@
 	font-weight: bold
 }
 
+.ui-selectoneradio label {
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 16px 0 8px;
+    vertical-align: middle;
+    /*color: #2e6e9e !important;*/
+    font-size: medium;
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+    border: 1px solid #c5dbec;
+    font-weight: bold;
+    color: black;
+}
+
 .ui-fluid .ui-inputmask {
 	font-size: 20px;
 	width: 100%;
@@ -67,7 +82,7 @@
 }
 
 .ui-panel .ui-panel-title {
-	font-size: medium;
+	font-size: large;
 }
 </style>
 	</ui:define>
@@ -78,16 +93,15 @@
 					<div class="ui-g">
 						<div class="ui-g-12">
 							<h:panelGroup id="botoes">
-								<div class="ui-g-12 ui-lg-2">
+								<div class="ui-g-12 ui-lg-1">
 									<p:commandButton value="Incluir"
 										style="height:40px; background: greenyellow !important  ;   
 										background-color: greenyellow; 
 										color:white !important;
 										font-size:large; "
-										action="#{medicoBean.novo}" rendered="true" immediate="true"
-										icon="fa fa-plus" iconPos="right" />
+										action="#{medicoBean.novo}" rendered="true" immediate="true" />
 								</div>
-								<div class="ui-g-12 ui-lg-2">
+								<div class="ui-g-12 ui-lg-1">
 									<p:commandButton id="botaoEditar" value="Editar"
 										style="height:40px; background: lightskyblue !important  ;
 										   background-color: lightskyblue ;
@@ -95,15 +109,34 @@
 										   font-size:large;"
 										immediate="true" action="#{medicoBean.editar}"
 										update="table, @form"
-										rendered="#{medicoBean.medicoModel.idMedico > 0 }"
-										icon=" fa fa-pencil" iconPos="right">
+										rendered="#{medicoBean.medicoModel.idMedico > 0 }">
 
 										<f:setPropertyActionListener value="#{d}"
 											target="#{medicoBean.medicoModel}" />
 									</p:commandButton>
 								</div>
+								<div class="ui-g-12 ui-lg-2">
+									<p:commandButton id="botaoInativar" value="Ativar - Inativar"
+										style="height:40px;background: tomato !important  ;
+										   background-color: tomato ;
+										   color:white !important;
+										   font-size:large;"
+										immediate="true" action="#{medicoBean.inativar}"
+										update="table, @form"
+										rendered="#{medicoBean.medicoModel.idMedico > 0 }">
+									</p:commandButton>
+								</div>
+								<div class="ui-g-12 ui-lg-3">
+									<p:selectOneRadio value="#{medicoBean.campoBuscaAtivo}"> 
+										<f:selectItem itemLabel="Todos" itemValue="T" />
+										<f:selectItem itemLabel="Ativo" itemValue="A" />
+										<f:selectItem itemLabel="Inativo" itemValue="I" />
+										<p:ajax event="change" listener="#{medicoBean.busca}"
+											update="table" />
+									</p:selectOneRadio>
+								</div>
 							</h:panelGroup>
-							<div class="ui-g-12 ui-lg-4">
+							<div class="ui-g-12 ui-lg-2">
 								<p:inputText value="#{medicoBean.campoBuscaNome}"
 									placeholder="Buscar pelo Nome" id="inputNome"
 									style="height:40px; ">
@@ -119,10 +152,9 @@
 								</p:inputText>
 							</div>
 							<div class="ui-g-12 ui-lg-1">
-								<p:commandButton style="height:40px;width:130px; "
-									styleClass="btn btn-blue" icon="ui-icon-search"
+								<p:commandButton style="height:40px;" icon="ui-icon-search"
 									id="btnBuscatxt" actionListener="#{medicoBean.busca}"
-									update=" inputNome,inputCPF,table" />
+									update="table" />
 								<p:defaultCommand target="btnBuscatxt" />
 							</div>
 						</div>
@@ -130,46 +162,44 @@
 				</p:panel>
 				<p:panel>
 					<div class="ui-g">
-						<br />
-						<p:dataTable value="#{medicoBean.lstMedico}" var="d"
-							styleClass="table.gridtable" rowKey="#{d.idMedico}"
-							selectionMode="single" id="table"
-							selection="#{medicoBean.medicoModel}">
+						<div class="ui-g-12 ui-lg-12 ui-sm-12 ui-md-12">
+							<p:dataTable value="#{medicoBean.lstMedico}" var="d"
+							emptyMessage="Não há registros disponível"
+								reflow="true" styleClass="table.gridtable"
+								rowKey="#{d.idMedico}" selectionMode="single" id="table"
+								selection="#{medicoBean.medicoModel}">
 
-							<p:ajax event="rowSelect" listener="#{medicoBean.onRowSelect}"
-								update="table,:form:botoes" />
+								<p:ajax event="rowSelect" listener="#{medicoBean.onRowSelect}"
+									update="table,:form:botoes" />
 
+								<p:column headerText="Médico" priority="1"
+									style="overflow: hidden;text-align: left; font-size: large">
+									<p:outputLabel value="#{d.pessoa.pessoaNome}" />
+									<br />
+									<p:outputLabel value="CPF - #{d.pessoa.pessoaCPF}" />
+									<br/>
+									<p:outputLabel value="#{d.pessoa.pessoaTelefonePrimario}" />
+								</p:column>
 
-							<p:column headerText="Matricula" priority="1"
-								style="overflow: hidden;text-align: center; font-size: medium; width: 90px">
-								<a>#{d.idMedico} <br />
-								</a>
-							</p:column>
+								<p:column headerText="Especialidade" priority="1"
+									style="overflow: hidden;text-align: left; font-size: large">
+									<p:outputLabel value="#{d.especialidades}" />
+								</p:column>
 
-							<p:column headerText="Médico" priority="1"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								#{d.pessoa.pessoaNome} <br /> CPF - #{d.pessoa.pessoaCPF}
-								
-							</p:column>
-							
-							<p:column headerText="Especialidade" priority="1"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								#{d.especialidades}
-							</p:column>
+								<p:column headerText="Endereço" priority="5"
+									style="overflow: hidden;text-align: left; font-size: large">
+									<p:outputLabel value="#{d.pessoa.logradouro}" />
+								</p:column>
 
+								<p:column headerText="Status" priority="5"
+									style="overflow: hidden;text-align: center; font-size: large; width: 8%">
+									<p:outputLabel value="Ativo" rendered="#{d.ativo eq 'A'}"
+										style="color : green" />
+									<p:outputLabel value="Inativo" rendered="#{d.ativo eq 'I'}"
+										style="color : red" />
+								</p:column>
 
-							<p:column headerText="Endereço" priority="5"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<a>#{d.pessoa.logradouro} <br />
-								</a>
-							</p:column>
-							<p:column headerText="Telefone" priority="5"
-								style="overflow: hidden;text-align: left; font-size: medium">
-								<a>#{d.pessoa.pessoaTelefonePrimario} <br />
-								</a>
-							</p:column>
-
-							<p:column style="width:50px" priority="4">
+								<!--  <p:column style="width:50px" priority="4">
 								<center>
 									<f:facet name="header">Excluir</f:facet>
 									<p:commandLink action="#{medicoBean.excluir}"
@@ -180,10 +210,9 @@
 											target="#{medicoBean.medicoModel}" />
 									</p:commandLink>
 								</center>
-							</p:column>
-
-
-						</p:dataTable>
+							</p:column> -->
+							</p:dataTable>
+						</div>
 					</div>
 				</p:panel>
 			</div>
