--- a/WebContent/prontuario/atestado.xhtml
+++ b/WebContent/prontuario/atestado.xhtml
@@ -6,13 +6,12 @@
 	xmlns:util="http://java.sun.com/jsf/composite/componentes">
 	<body>
 		<div class="content">
-			<p:panel>
 				<div align="center">
 					<p:outputLabel value="Guia de Atestado" styleClass="titulo" />
 				</div>
 				<div class="ui-g">
 					<div class="ui-g-12 ui-lg-12" align="center">
-						<p:inputTextarea rows="20" cols="60" autoResize="true"
+						<p:inputTextarea rows="12"  autoResize="true"
 							value="#{prontuarioBean.prontuarioModel.atestado}"
 							required="false" />
 					</div>
@@ -23,7 +22,6 @@
 							style="height:40px;width:130px; background-color: seagreen; background: seagreen; color:white !important" />
 					</div>
 				</div>
-			</p:panel>
 		</div>
 	</body>
 </html>
