financeiro contas a pagar

--- a/WebContent/cadastro/findAtendente.xhtml
+++ b/WebContent/cadastro/findAtendente.xhtml
@@ -40,10 +40,11 @@
 }
 
 .ui-fluid .ui-inputtext {
-	width: 100%;
-	height: 35px;
-	font-size: large;
-	color: black;
+    width: 100%;
+    height: 35px;
+    font-size: large;
+    text-align: center;
+    color: black;
 }
 
 .ui-fluid .ui-inputtextarea {
@@ -78,7 +79,6 @@
 }
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
     border: 1px solid #c5dbec;
-    background: #dfeffc url(/clinica/javax.faces.resource/images/ui-bg_glass_85_dfeffc_1x400.png.xhtml?ln=primefaces-redmond) 50% 50% repeat-x;
     font-weight: bold;
     color: black;
 }
